--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,7 +1,7 @@
 <div>
 <div class="">
 <form [formGroup]="clientForm" (ngSubmit)="submithandle()" >
- <form [formGroup]="clientForminter" >
+ 
 <div id="parti1" *ngIf="!suivant">
   <div class="row">
    <div class="col-xs-6 col-md-6  Vcenter">
@@ -26,7 +26,7 @@
    </div>
    <div class="col-xs-6 col-md-6">
          <label for="email">Email<span>*</span></label>
-         <input type="text" class="form-control activation" id="email" placeholder="email" formControlName="email" [ngClass]="{'form-control':true,'is-invalid':email.invalid && email.touched, 'is-valid':email.valid && email.touched}">
+         <input type="text" class="form-control activation" (change)="emailLogin()" id="email" placeholder="email" formControlName="email" [ngClass]="{'form-control':true,'is-invalid':email.invalid && email.touched, 'is-valid':email.valid && email.touched}">
    </div>
    <div class="col-xs-6 col-md-6">
       <label for="localite">Localité<span>*</span></label>
@@ -61,36 +61,38 @@
  <div class="col-xs-6 col-md-6">
       <label for="textarea">Observation </label>
       <textarea class="form-control activation" id="observation" rows="5" maxlength="500" formControlName="observation" [ngClass]="{'form-control':true,'is-invalid':observation.invalid && observation.touched, 'is-valid':observation.valid && observation.touched}"></textarea>
-      <button  class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter"id="buttonenregistrer" (click)="visibiliteDiv($event)" [disabled]="!clientForminter.valid" *ngIf="!suivant"  >Suivant</button>
   </div>
  </div>
  </div>
  <!-- DEUXIEME DIV CONFIRMATION  -->
- <div id="parti2" *ngIf="suivant" >
+ <div id="parti2">
       <div >
            <div class="form-group col-xs-6 col-md-10">
                <label for="inputEmail"> Login<span>*</span></label>
-               <input type="email" id="inputEmail" class="form-control" placeholder="Login" formControlName="login" [ngClass]="{'form-control':true,'is-invalid':login.invalid && login.touched, 'is-valid':login.valid && login.touched}">
+               <input disabled type="email" id="inputEmail" class="form-control" placeholder="Login" formControlName="login" [ngClass]="{'form-control':true,'is-invalid':login.invalid && login.touched, 'is-valid':login.valid && login.touched}">
             </div>
             <div class="form-group col-xs-6 col-md-10" >
               <label for="inputPassword">Mot de Passe<span>*</span></label>
                <input type="password" id="inputPassword" class="form-control" placeholder="Mot de Passe" formControlName="password" [ngClass]="{'form-control':true,'is-invalid':password.invalid && password.touched, 'is-valid':password.valid && password.touched}">
+               <div *ngIf="f.password.errors" class="invalid-feedback">
+                   <div *ngIf="f.password.errors.minlength" style="font-size: 20px;">Mot de Passe au minimum 8 caractères</div>
+               </div>
             </div>
             <div class="form-group col-xs-6 col-md-10" >
                <label for="inputConfirmPassword">Confirmer<span>*</span></label> 
                <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Confirmer" formControlName="confirmer" [ngClass]="{'form-control':true,'is-invalid':confirmer.invalid && confirmer.touched, 'is-valid':confirmer.valid && confirmer.touched}">
+               <div *ngIf="confirmer.touched  && f.confirmer.errors" class="invalid-feedback">
+                   <div *ngIf="f.confirmer.errors.mustMatch" style="font-size: 20px;">Erreur Veillez confirmer votre Mot de Passe</div>
+              </div>
             </div>
             <div id="boutons" class="row form-group col-xs-6 col-md-10">
-              <div class="col-md-6 col-sm-6" > 
-                 <button id="boutons retour" class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter" type="reset" (click)="retour($event)"> Précédent</button> 
-               </div>
                <div class="col-md-6 col-sm-6" >
                  <button id="Valider" class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter" type="submit"[disabled]="!clientForm.valid" >S'enregistrer</button>
                </div>
            </div>
       </div>
  </div>
-</form>
+
 </form>
 
 <!-- [disabled]="clientForm.invalid" -->
