--- a/src/app/client/acceuil-client/acceuil-client.component.html
+++ b/src/app/client/acceuil-client/acceuil-client.component.html
@@ -24,11 +24,11 @@
            <a href="#myModal" data-toggle="modal"  title="Compose"    class="btn btn-compose">Compose</a>            
         </div>
         <ul class="inbox-nav inbox-divider">
-          <li class="active">
+          <li >
             <a (click)="visibiliteProfile()"><i class="fa fa-bookmark-o"></i> Mon Profil</a>
           </li>
           <li>
-            <a (click)="visibiliteDemandes()"><i class="fa fa-inbox"></i>Mes Demandes</a>
+            <a (click)="visibiliteDemandes()"><i class="fa fa-inbox"></i>Nouvelle Demandes</a>
           </li>
           <li>
              <a (click)="visibiliteEmploye()"><i class="fa fa-external-link"></i>Employes</a>
