--- a/src/app/section1/section1.component.html
+++ b/src/app/section1/section1.component.html
@@ -45,10 +45,10 @@
                                         <img  src="../assets/images/li2.jpg" class="img-thumbnail">
                                     </div>
                                     <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                        <img  src="../assets/images/li.jpg" class="img-thumbnail">
+                                        <img  src="../assets/REDIM/R13.jpg" class="img-thumbnail">
                                     </div>
                                     <div class="col-sm-6 col-md-3 mb-2 wow bounceInUp" data-wow-duration="1.4s">
-                                        <img  src="../assets/SET1/meer.jpg" class="img-thumbnail">
+                                        <img  src="../assets/REDIM/R9.jpg" class="img-thumbnail">
                                     </div>
                                 </div>
                             </div>
