--- a/src/app/employee/recherche-niveau-etudes/recherche-niveau-etudes.component.html
+++ b/src/app/employee/recherche-niveau-etudes/recherche-niveau-etudes.component.html
@@ -2,7 +2,7 @@
 <div class="col-md-2">
   <form (ngSubmit)="rechercher()">
   <div class="input-group">
-    <input type="text"  placeholder="Search  for..." class="form-control" id="niveau" required [(ngModel)]="niveau" name="niveau">
+    <input type="text"  placeholder="Search  for..." class="form-control" id="niveau" required [(ngModel)]="niveauEtudes" name="niveauEtudes">
     <span class="input-group-btn">
       <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
     </span>
@@ -27,7 +27,7 @@
                               <div class="card-body text-center">
                                   <p><img  src={{uploadPhotoEmployer(employee.photo)}} class="img-circle"  width="94" height="66"></p>
                                   <h4 class="card-title">{{employee.prenom}} {{employee.nom}}</h4>
-                                  <p class="card-text">{{employee.niveau}},{{employee.email}}</p>
+                                  <p class="card-text">{{employee.email}}</p>
                               </div>
                           </div>
                       </div>
