--- a/src/app/client/nouvelle-demande/nouvelle-demande.component.html
+++ b/src/app/client/nouvelle-demande/nouvelle-demande.component.html
@@ -9,7 +9,7 @@
 					 <input class="form-control" id="" name="" placeholder="Salaire Proposé en FCFA" type="text" formControlName="salairePropose" >
 				   </div>
 				   <div class="col-sm-12 form-group"><br>
-					  <textarea class="form-control" id="" name="" placeholder="Commentaire sur le(s) Service(s) demande(s)" formControlName="service" rows="4"></textarea>
+					  <textarea class="form-control" id="" name="" placeholder="Commentaire sur le(s) Service(s) demande(s)" formControlName="services" rows="4"></textarea>
 				  </div> 
 				</div> 
 		    </div>
