jour de présentation

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-6 text-center text-lg-left my-auto  wow zoomIn">
                     <ul class="list-inline mb-2">
                         <li class="list-inline-item">
-                        <a href="#">About</a>
+                        <a href="#">A propos</a>
                  </li>
                         <li class="list-inline-item">⋅</li>
                         <li class="list-inline-item">
@@ -13,14 +13,10 @@
                         </li>
                         <li class="list-inline-item">⋅</li>
                         <li class="list-inline-item">
-                            <a href="#">Terms of Use</a>
-                        </li>
-                        <li class="list-inline-item">⋅</li>
-                        <li class="list-inline-item">
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Partenaires</a>
                         </li>
                     </ul>
-                    <p class="text-muted small mb-4 mb-lg-0">© Mojoave 2018. All Rights Reserved.</p>
+                    <p class="text-muted small mb-4 mb-lg-0">© SEN-MENAGE. All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-right my-auto  wow zoomIn">
                     <ul class="list-inline mb-0">
