--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -8,9 +8,9 @@
         <div class="container slider-top-text">
             <div class="row">
                 <div  class="col-md-12 text-center">
-                    <h3 id="text1" class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Managere</span></h3>
+                    <h3 id="text1" class="my-heading">Bienvenue sur <span class="bg-main">votre Espace Ménagère</span></h3>
                     <h4 class="myp-slider text-center">Nous vous proposons des Services de qualités</h4>
-                    <h4 class="myp text-center">Services Entreprises    |   Service Menageres    |   Service d'Organisations </h4>
+                    <h4 class="myp text-center">Services Entreprises    |   Service Ménagères    |   Service d'Organisations </h4>
                 </div>
                 
             </div>
@@ -47,7 +47,7 @@
     <!-- 1 -->
   <div class="col-sm-3">
       <div>
-            <img src="../assets/SET/C1.jpg" alt="Image" width="280" height="200">
+            <img src="../assets/SET/C1.jpg" alt="Image" width="240" height="200">
             <br/><br/>
 
       </div>
@@ -58,40 +58,39 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             
-        <img src="../assets/pics/household.jpg" alt="Image" width="180" height="180" align="left" style="">
+        <img src="../assets/SET1/bf.jpg" alt="Image" width="240" height="200" align="left">
             
-        <p style="text-align: justify;">Lorem ipsum dolLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p style="text-align: justify;">Lorem ipsum dolLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
   <!--  2-->
   <div class="col-sm-3"> 
-        <img src="../assets/images/pom.jpeg" alt="Image" width="180" height="140" align="left" style="margin-right:10px;">
+        <img src="../assets/images/pom.jpeg" alt="Image" width="240" height="200" align="left">
 
     <p style="text-align: justify;" >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     
     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <br/>
-    <img src="../assets/pics/nounou.jpg" alt="Image" width="280" height="200">
+    <img src="../assets/pics/nounou.jpg" alt="Image" width="240" height="200">
             <br/><br/>
     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     </div>
   <!-- 3 -->
   <div class="col-sm-3">
+        <img src="../assets/SET1/mere.jpg" alt="Image" width="240" height="200" align="right" style="margin-left:10px;"> 
+        <br/>
       <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-    <img src="../assets/images/fen.jpg" alt="Image" width="180" height="140" align="right" style="margin-left:10px;"> 
-    <br/>
-
     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <p style="text-align: justify;">Lorem ipsum dolLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci <br/><br/>
-        <img src="../assets/pics/soutien.jpg" alt="Image" width="280" height="200">
+        <img src="../assets/pics/soutien.jpg" alt="Image" width="240" height="200">
             <br/><br/>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>            
@@ -104,13 +103,13 @@
 <!-- 1er Div -->
   <div class="col-sm-4">
    
-      <div class="panel-body"><img src="../assets/images/li.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+      <div class="panel-body"><img src="../assets/images/feme.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
       <div class="panel-footer"> <p style="text-align: center;">Linge et Repassage</p></div>
   
   </div>
   <div class="col-sm-4"> 
    
-      <div class="panel-body"><img src="../assets/images/fem.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+      <div class="panel-body"><img src="../assets/images/fen.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
       <div class="panel-footer"><p style="text-align: center;">Cuisine et Vaisselle</p></div>
   </div>
   <div class="col-sm-4"> 
