--- a/src/app/client/acceuil-client/acceuil-client.component.scss
+++ b/src/app/client/acceuil-client/acceuil-client.component.scss
@@ -364,3 +364,14 @@ ul {
     padding: 0px;
     margin: 0px;
 }
+#deconnexion
+{
+    margin-left: 30px;
+    background-color: rosybrown;
+    font-size: 15px;
+    font-weight: bold;
+}
+#deconnexion:hover
+{
+    background-color: red;
+}
