--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,21 +1,21 @@
 <body>
-    <form name="auth" [formGroup]="loginForm" (submit)="connexion()" >
-        <div class="container">
-            <div class="row">
-                <div class="col-md-offset-5 col-md-3">
-                    <div class="form-login">
-                    <h4>Sen Menageres</h4>
-                    <input type="text" id="userName" formControlName="login" required class="form-control input-sm chat-input" placeholder="username" />
-                    <br/>
-                    <input type="text" id="userPassword" formControlName="password" required class="form-control input-sm chat-input" placeholder="password" />
-                    <br/>
-                    <div class="wrapper">
-                    <span class="group-btn">     
-                    <button type="submit"  class="btn btn-primary btn-md">login <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-in"></i></button>
-                    </span>
+    <form name="auth" [formGroup]="loginForm" (submit)="connexion()" class="formulaire">
+        <div class="container div1">
+            <div class="row div2">
+                <div class="col-md-12 div3">
+                    <div class="col-md-3"></div>
+                    <div class=" col-md-6 form-login">
+                       <h4>Sen Menageres</h4>
+                      <input type="text" id="userName" formControlName="login" required class="form-control input-sm chat-input" placeholder="username" />
+                      <br/>
+                      <input type="password" id="userPassword" formControlName="password" required class="form-control input-sm chat-input" placeholder="password" />
+                      <br/>
+                      <div class="wrapper">
+                        <span class="group-btn">     
+                            <button type="submit"  class="btn btn-primary btn-md">login <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-in"></i></button>
+                        </span>
+                      </div>
                     </div>
-                    </div>
-                
                 </div>
             </div>
         </div>
