--- a/src/app/client/nouvelle-demande/nouvelle-demande.component.html
+++ b/src/app/client/nouvelle-demande/nouvelle-demande.component.html
@@ -71,7 +71,7 @@
 									<p *ngIf="employe.pay.nom">Nationnalite :{{employe.pay.nom}}</p>
 								</div>
 								<div class="col-sm-6">
-									<p *ngIf="employe.langues">Langues parlées :</p>
+									<p >Langues parlées :</p>
 									<ul>
 										 <li *ngFor="let langue of employe.langues">{{langue.nom}}</li>
 									</ul>
@@ -82,7 +82,7 @@
 									<p *ngIf="employe.ethny.nom">Ethnie :{{employe.ethny.nom}}</p>
 								</div>
 								<div class="col-sm-6">
-									<p *ngIf="employe.competences">Competences :</p>
+									<p>Competences :</p>
 									<ul>
 										 <li *ngFor="let competence of employe.competences">{{competence.description}}</li>
 									</ul>
@@ -93,14 +93,13 @@
 									<p *ngIf="employe.niveauetude.niveau">Niveau d'Etude :{{employe.niveauetude.niveau}}</p>
 								</div>
 								<div class="col-sm-6">
-									<p *ngIf="employe.disponibilites">Disponibilite :</p>
+									<p>Disponibilite :</p>
 									<ul>
 										<li *ngFor="let disponibilite of employe.disponibilites"> {{disponibilite.moment}}  {{disponibilite.horaire}}</li>
 									</ul>
 								</div>
 							</div>
 						</div>
-						
 				  </div>
         </div>
 			 </td>
